# autoprop

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.md  README.rst  autoprop.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_and_release.yml
autoprop/: __init__.py  cache.py  decorators.py  policies.py
docs/: Makefile  basic_usage.rst  conf.py  index.rst
tests/: check_performance.nt  check_performance.py  conftest.py  test_autoprop.py  test_cache.py  test_python2.py  test_python3.py
