[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autoprop"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
requires-python = "~=3.6"
dependencies = [
  'signature_dispatch~=1.0',
  'backports.cached-property;python_version<"3.8"',
]
classifiers = [
  'Programming Language :: Python :: 3.6',
  'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
test = [
  'pytest',
  'pytest-cov',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.urls]
'Documentation' = 'https://autoprop.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/autoprop'
'Bug Tracker' = 'https://github.com/kalekundert/autoprop/issues'
'Continuous Integration' = 'https://github.com/kalekundert/autoprop/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/autoprop'

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]

[tool.semantic_release]
version_variable = 'autoprop/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
